--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -68,8 +68,8 @@ development:
     pretty: false
     headers:
       'Access-Control-Allow-Origin': '*'
-    watch_options:
-      ignored: '**/node_modules/**'
+    # watch_options:
+      # ignored: '**/node_modules/**'
 
 
 test:
